; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_core.c_device_destroy.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/base/extr_core.c_device_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.class = type { i32 }
%struct.device = type { i32 }

@__match_devt = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @device_destroy(%struct.class* %0, i32 %1) #0 {
  %3 = alloca %struct.class*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.device*, align 8
  store %struct.class* %0, %struct.class** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.class*, %struct.class** %3, align 8
  %7 = load i32, i32* @__match_devt, align 4
  %8 = call %struct.device* @class_find_device(%struct.class* %6, i32* null, i32* %4, i32 %7)
  store %struct.device* %8, %struct.device** %5, align 8
  %9 = load %struct.device*, %struct.device** %5, align 8
  %10 = icmp ne %struct.device* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load %struct.device*, %struct.device** %5, align 8
  %13 = call i32 @put_device(%struct.device* %12)
  %14 = load %struct.device*, %struct.device** %5, align 8
  %15 = call i32 @device_unregister(%struct.device* %14)
  br label %16

16:                                               ; preds = %11, %2
  ret void
}

declare dso_local %struct.device* @class_find_device(%struct.class*, i32*, i32*, i32) #1

declare dso_local i32 @put_device(%struct.device*) #1

declare dso_local i32 @device_unregister(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
